syntax = "proto3";

package comment;

option php_namespace = "GRPC\\comment";
option php_metadata_namespace = "GRPC\\comment\\GPBMetadata";


service CommentGrpc {
    rpc commentProductCreate (CommentProductCreateRequest) returns (CommentProductCreateResponse);
    rpc commentProductUpdate (CommentProductUpdateRequest) returns (CommentProductUpdateResponse);
    rpc commentProductList (CommentProductListRequest) returns (CommentProductListResponse);
}

message CommentProductCreateRequest {
    uint64 product_price_id = 1;
    string comment = 2;
}

message CommentProductCreateResponse {
    string message = 1;
}

message CommentProductUpdateRequest {
    uint64 id = 1;
    bool is_active = 2;
}

message CommentProductUpdateResponse {
    string message = 1;
}

message CommentProductListRequest {
    uint64 product_price_id = 1;
}

message CommentProductListResponse {
    repeated string comment = 1;
}
